# winit-webview

./: Cargo.toml  README.md
examples/: embed_html.rs  hello.html  hello_world.rs  request_handler.rs
src/: events.rs  lib.rs  request.rs
src/platform/: macos.rs
src/platform_impl/macos/: macros.rs  mod.rs
